syntax = "proto3";

package user_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/coooller/auth/pkg/user_v1;user_v1";

service UserV1 {
  rpc Create (CreateUserIn) returns (CreateUserOut);
  rpc Get (GetUserIn) returns (GetUserOut);
  rpc Update (UpdateUserIn) returns (google.protobuf.Empty);
  rpc Delete (DeleteUserIn) returns (google.protobuf.Empty);
}

enum Role {
  UNKNOWN = 0;
  USER = 1;
  ADMIN = 2;
}

message CreateUserIn {
  string name = 1;
  string email = 2;
  string password = 3;
  string password_confirm = 4;
  Role role = 5;
}

message CreateUserOut {
  int64 id = 1;
}

message GetUserIn {
  int64 id = 1;
}

message GetUserOut {
  int64 id = 1;
  string name = 2;
  string email = 3;
  Role role = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message UpdateUserIn {
  int64 id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue email = 3;
  Role role = 4;
}

message DeleteUserIn {
  int64 id = 1;
}
